# ml-wine-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  integration_pipeline.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: main.py
api/static/: user_data.js
api/templates/: index.html
deployment/: .terraform.lock.hcl  github.tf  index.html  main.tf  push-placeholder.sh  setup_tfstate.sh  terraform.tfvars.example
ml_model/config/: __init__.py  dynamic_config.py  static_config.yml
ml_model/datasets/: test_predictions.csv
ml_model/model/: data_utils.py  data_validation.py  model_utils.py  pipeline.py  predict.py  train_pipeline.py
ml_model/notebooks/: README.md  wine_quality_random_forest.ipynb
ml_model/tests/: pytest.ini  test_load_dataset.py
